--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
   </div>
  
   <div class="auth-links">
-    <button><a routerLink="/">Login</a></button>
-    <button><a routerLink="/register">Register</a></button>
+    <a routerLink="/login"><button>Login</button></a>
+    <a routerLink="/register"><button>Register</button></a>
   </div>
 </div>
