--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,127 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+}
+
 a {
   text-decoration: none;
+}
+
+input, a, button {
+  outline: none;
+}
+
+.register {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  .reg-card {
+    transform: translateY(2em);
+    position: relative;
+    width: 1000px;
+    display: flex;
+    box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
+    border-radius: 1.2em;
+
+    .bubble {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  .reg-form {
+    flex-flow: column;
+    width: 50%;
+    padding: 4em 4em 2em;
+    padding-left: 5em;
+    h1 {
+      color: #0066ff;
+      font-family: 'Aclonica', sans-serif;
+      text-align: center;
+      margin-bottom: 1.2em;
+      font-size: 1.8em;
+    }
+    .password-inputs {
+      display: grid;
+      grid-template-columns: 48% 48%;
+      grid-gap: 4%;
+    }
+    .forgot-p{
+      font-family: 'Roboto', sans-serif;
+      font-weight: 400;
+      color: #FA254F;
+      font-size: 0.9em;
+    }
+    button {
+      width: 100%;
+      padding: 1em;
+      font-weight: 500;
+      font-size: 0.9em;
+    }
+    .reg-btn {
+      color: white;
+      font-family: 'Roboto Mono', sans-serif;
+      background-color: #0066ff;
+    }
+    .google {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Red Hat Text', sans-serif;
+      background-color: #feffff;
+      font-weight: bold;
+      border: none;
+      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+      span {
+        margin-left: 1em;
+      }
+    }
+    .or {
+      display: flex;
+      align-items: center;
+      padding: 1em 0;
+      color: rgba(0, 0, 0, 0.3);
+      hr {
+        width: 100%;
+        height: 1px;
+      }
+      span {
+        font-family: 'Roboto Mono', sans-serif;
+        margin: 0 0.5em;
+        color: rgba(0, 0, 0, 0.5);
+      }
+    }
+
+    .sign-in-link{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 0.8em;
+      font-family: 'Roboto', sans-serif;
+      p {
+        font-weight: 400;
+        margin-right: 0.5em;
+      }
+      a {
+        color: #FA254F;
+        font-weight: 500;
+        cursor: pointer;
+      }
+      
+    }
+  }
+
+  .illustration {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+      height: 15em;
+      width: 20em;
+    }
+  }
+}
 }
 
 body {
